--- a/_posts/2022-08-25-Hello PHL!.md
+++ b/_posts/2022-08-25-Hello PHL!.md
@@ -31,6 +31,17 @@ key: value
 key2: value2
 ```
 
+```terminal
+mha.mhachain.overlapadd.mhachain.fftfilterbank.f = [250 500 1000 1500 2000 3000 4000 6000 8000]
+
+mha.mhachain.overlapadd.mhachain.fftfilterbank.fscale = log
+
+mha.mhachain.overlapadd.mhachain.fftfilterbank.ovltype = rect
+
+mha.mhachain.overlapadd.mhachain.fftfilterbank.ftype = center
+```
+
+
 
 
 
