Tweak to B&C friendly.

--- a/_posts/2022-08-25-Hello PHL!.md
+++ b/_posts/2022-08-25-Hello PHL!.md
@@ -1,7 +1,7 @@
 ---
 title: PHL Now!
 date: 2022-08-25
-categories: [bullshit1, bullshit2]
+categories: [bologna1, bologna2]
 tags: [hearing,mahalia,microphones]
 ---
 
