--- a/_posts/2022-08-25-Hello PHL!.md
+++ b/_posts/2022-08-25-Hello PHL!.md
@@ -1,6 +1,6 @@
 ---
-title: PHL Now!
-date: 2022-08-25
+title: Blog post 
+date: 2023-01-09
 categories: [bologna1, bologna2]
 tags: [hearing,mahalia,microphones]
 ---
