--- a/_posts/2022-08-25-Hello PHL!.md
+++ b/_posts/2022-08-25-Hello PHL!.md
@@ -1,5 +1,5 @@
 ---
-title: Blog post 
+title: Hello PHL! 
 date: 2023-08-18
 categories: [bologna1, bologna2]
 tags: [hearing,mahalia,microphones]
@@ -42,7 +42,6 @@ mha.mhachain.overlapadd.mhachain.fftfilterbank.ftype = center
 ```
 
 ### Here's a video
-<iframe width="480" height="360" src="https://www.youtube.com/watch?v=6TWJaFD6R2s" frameborder="0"> </iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/6TWJaFD6R2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
 
